# libtokenize

./: .gitignore  CMakeLists.txt
include/: tokenize.h
src/: tokenize.c
